Remove guava from integration-testing, dns-discovery, es-testing, blob